@@ -1202,8 +1202,8 @@ these lines."
 		   (stringp mail-archive-file-name))
 	      (format "FCC: %s\n" mail-archive-file-name))
 	  ;; Use the value of `mail-default-headers' if available.
-	  ;; Note: as for Emacs 21, XEmacs 21.4 and 21.5, it is
-	  ;; unavailable unless sendmail.el is loaded.
+	  ;; Note: as for XEmacs 21.4 and 21.5, it is unavailable
+	  ;; unless sendmail.el is loaded.
 	  (if (boundp 'mail-default-headers)
 	      mail-default-headers))
   "*A string of header lines to be inserted in outgoing mails."
