@@ -1,3 +1,11 @@
+2010-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mail-source.el (mail-source-report-new-mail)
+	* message.el (message-default-mail-headers)
+	* mm-decode.el (mm-valid-image-format-p): Comment fix.
+
+	* mml2015.el (mml2015-use): Don't bind recursive-load-depth-limit.
+
 2010-09-28  Julien Danjou  <julien@danjou.info>
 
 	* gnus-gravatar.el (gnus-gravatar-insert): Fix search in case
